[package]
name = "rst-common"
version = "1.0.0"
edition = "2021"
authors = ["rstlix0x0 <rstlix0x0.dev@gmail.com>"]
rust-version = "1.74" 
description = "A shortcut to common Rust crates"
license-file = "LICENSE"
keywords = ["crates", "common", "libraries"]
categories = ["development-tools", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {"version" = "1.0.196", features = ["derive"] }
serde_json = {"version" = "1.0.113"}
erased-serde = {"version" = "0.4.2"}
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = {version = "0.4.33"}
dyn-clone = {version = "1.0.16"}
futures = {version = "0.3.30"}
async-trait = {version = "0.1.77"}
tokio = {version = "1.36.0", features = ["full"], optional = true}
tracing = {version = "0.1.40", optional = true}
tracing-subscriber = {version = "0.3.18", features = ["env-filter"], optional = true}
log = {version = "0.4.20", optional = true}
env_logger = {version = "0.11.1", optional = true}
thiserror = {version = "1.0.56", optional = true}
anyhow = {version = "1.0.79", optional = true}
mockall = {version = "0.12.1", optional = true}
table-test = {version = "0.2.1", optional = true}
axum = {version = "0.7.4", optional = true}
tower = {version = "0.4.13", optional = true}
hyper = {version = "1.1.0", optional = true}
hyper-util = { version = "0.1.3", features = ["tokio", "server-auto", "http1"], optional = true }
tower-http = { version = "0.5.1", features = ["trace", "timeout"], optional = true } 
rand = {version = "0.8.5", optional = true}
rand_chacha = {version = "0.3.1", optional = true}
hex = {version = "0.4.3", optional = true}
chacha20poly1305 = {version = "0.10.1", optional = true}
blake3 = {version = "1.5.0", optional = true}
argon2 = {version = "0.5.3", optional = true}
ring = {version = "0.17.7", optional = true}
ed25519-dalek = { version = "2.1.0", features = ["pkcs8", "pem", "rand_core"], optional = true } 
x25519-dalek = { version = "2.0.0", features = ["static_secrets"], optional = true }

[features]
default = ["standard"]
full = ["standard", "with-tokio", "with-tracing", "with-logging", "with-errors", "with-tests", "with-http-tokio", "with-cryptography"]
standard = []
with-tokio = ["dep:tokio"]
with-tracing = ["dep:tracing", "dep:tracing-subscriber"]
with-logging = ["dep:log", "dep:env_logger"]
with-errors = ["dep:thiserror", "dep:anyhow"]
with-tests = ["dep:mockall", "dep:table-test"]
with-http-tokio = ["dep:tokio", "dep:axum", "dep:tower", "dep:hyper", "dep:hyper-util", "dep:tower-http"]
with-cryptography = ["dep:rand", "dep:rand_chacha", "dep:hex", "dep:chacha20poly1305", "dep:blake3", "dep:argon2", "dep:ring", "dep:ed25519-dalek", "dep:x25519-dalek"]

[[example]]
name = "standard"
path = "examples/standard/main.rs"
required-features = ["default"]

[[example]]
name = "with-tokio"
path = "examples/with-tokio/main.rs"
required-features = ["with-tokio"]

[[example]]
name = "with-errors"
path = "examples/with-errors/main.rs"
required-features = ["with-errors"]

[package.metadata.docs.rs]
all-features = true