[package]
name = "rst-common"
version = "1.1.1"
edition = "2021"
authors = ["rstlix0x0 <rstlix.dev@gmail.com>"]
rust-version = "1.74" 
description = "A shortcut to common Rust crates"
license = "Apache-2.0"
keywords = ["crates", "common", "libraries"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://docs.rs/rst-common"
documentation = "https://docs.rs/rst-common"
repository = "https://github.com/rstlix0x0/rst-common"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {"version" = "~1", features = ["derive"] }
serde_json = {"version" = "~1"}
erased-serde = {"version" = "~0.4"}
uuid = { version = "~1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = {version = "~0.4"}
dyn-clone = {version = "~1"}
futures = {version = "~0.3"}
async-trait = {version = "~0.1"}
tokio = {version = "~1", features = ["full"], optional = true}
tracing = {version = "~0.1", optional = true}
tracing-subscriber = {version = "~0.3", features = ["env-filter"], optional = true}
log = {version = "~0.4", optional = true}
env_logger = {version = "~0.11", optional = true}
thiserror = {version = "~1", optional = true}
anyhow = {version = "~1", optional = true}
mockall = {version = "~0.12", optional = true}
table-test = {version = "~0.2", optional = true}
axum = {version = "~0.7", optional = true}
tower = {version = "~0.4", optional = true}
hyper = {version = "~1", optional = true}
hyper-util = { version = "~0.1", features = ["tokio", "server-auto", "http1"], optional = true }
tower-http = { version = "~0.5", features = ["trace", "timeout"], optional = true } 
rand = {version = "~0.8", optional = true}
rand_chacha = {version = "~0.3", optional = true}
hex = {version = "~0.4", optional = true}
chacha20poly1305 = {version = "~0.10", optional = true}
blake3 = {version = "~1", optional = true}
argon2 = {version = "~0.5", optional = true}
ring = {version = "~0.17", optional = true}
ed25519-dalek = { version = "~2", features = ["pkcs8", "pem", "rand_core"], optional = true } 
x25519-dalek = { version = "~2", features = ["static_secrets"], optional = true }

[features]
default = ["standard"]
full = ["standard", "with-tokio", "with-tracing", "with-logging", "with-errors", "with-tests", "with-http-tokio", "with-cryptography"]
standard = []
with-tokio = ["dep:tokio"]
with-tracing = ["dep:tracing", "dep:tracing-subscriber"]
with-logging = ["dep:log", "dep:env_logger"]
with-errors = ["dep:thiserror", "dep:anyhow"]
with-tests = ["dep:mockall", "dep:table-test"]
with-http-tokio = ["dep:tokio", "dep:axum", "dep:tower", "dep:hyper", "dep:hyper-util", "dep:tower-http"]
with-cryptography = ["dep:rand", "dep:rand_chacha", "dep:hex", "dep:chacha20poly1305", "dep:blake3", "dep:argon2", "dep:ring", "dep:ed25519-dalek", "dep:x25519-dalek"]

[[example]]
name = "standard"
path = "examples/standard/main.rs"
required-features = ["default"]

[[example]]
name = "with-tokio"
path = "examples/with-tokio/main.rs"
required-features = ["with-tokio"]

[[example]]
name = "with-errors"
path = "examples/with-errors/main.rs"
required-features = ["with-errors"]

[package.metadata.docs.rs]
all-features = true